feat: improve event bus.